# LM-Dispersion

./: .gitignore  Readme.md  tasks.txt
explore_olmo2/: plot.sbatch  plot_heatmap_checkpoints.py
explore_qwen3/: aggr_res.ipynb
key_observations/: compute_embedding_cossim.py  plot_trend.py
lm_dispersion/midtrain_gpt2_huggingface/: midtrain_gpt2_other_counter_condensation.py
lm_dispersion/midtrain_qwen3_huggingface/: lmeval_qwen3.py
lm_dispersion/pretrain_toy_gpt2_change_ffn/: plot_results.py  pretrain_toy_gpt2.py
prelim/exploration/: plot_trend.py  transformer_embedding_cossim_and_entropy.py
prelim/motivation/: evaluate_transformer_metrics.py
pypi/: LICENSE  Readme.md  pyproject.toml
pypi/embedding_condensation/: __init__.py
transformer_dispersion/: dispersion.py  eval.py  get_begin_res.ipynb  midtrain.py  plot_res_all.ipynb  plot_res_orig.ipynb  run_hyperparam_sweep.py  run_sweep.sh  sweep_gpt2_eval_init.py
transformer_dispersion/midtrain_gpt2_huggingface/: midtrain_gpt2.py  midtrain_gpt2_other_counter_condensation.py  plot_heatmaps.py  plot_results.py
transformer_dispersion/midtrain_gpt2_openwebtext/: midtrain.py  plot_res_orig.ipynb  plot_results.py  run_misha.sbatch  run_sweep.sh
transformer_dispersion/midtrain_llama3/: check_tokenizer_template.py  create_fresh_llama.py  lmeval_results.py  midtrain_llama.sbatch  midtrain_llama_misha.sbatch
transformer_dispersion/midtrain_llama3_huggingface/: midtrain.py  run_misha.sbatch  run_sweep.sh  run_sweep_single.sbatch
transformer_dispersion/midtrain_llama3_slimpajama/: README_eval.md  midtrain.py  (+7 more)
(+28 files in other folders)
